# ngru

./: README.md  docker-compose.yml
src/: conftest.py  manage.py  pyproject.toml  requirements.txt
src/app/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
src/app/migrations/: 0001_initial.py
src/app/test/: test_integration.py  test_unit.py
src/core/: asgi.py  s.py  urls.py  wsgi.py
src/core/settings/: base.py  production.py
